# ChangeLog for media-libs/libnsbmp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libnsbmp-0.0.3 (02 May 2011)

  02 May 2011; Michael Weber <xmw@gentoo.org> +libnsbmp-0.0.3.ebuild,
  +metadata.xml:
  Initial import, bug 347471, thanks to inciner@gmail.com for the initial
  ebuild
