@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST libnsbmp-0.0.3-src.tar.gz 219808 RMD160 f4031978ef464d78707e641a652a861f15efb6d1 SHA1 d5d6d08e3f1d99dd3f6f39fc3d79424531c7a6a7 SHA256 e0ccf851bf6dc9398b587f1b3f919773a49d7d2eb082b99ab5898217d73e47a2
-EBUILD libnsbmp-0.0.3.ebuild 1035 RMD160 505d074cfa2241f185e3feb0af4f7d44e4b6c760 SHA1 e08c8390ed83def2cafb2bb523d5234cd1911d32 SHA256 2dd764600ab46a82f0df052dc990f747a912b6eb7bfa87d0aa6a9b5916c79e04
-MISC ChangeLog 322 RMD160 acf6b3edff1daebf720f35c68ef7819c41704d6f SHA1 c6163f3a1125088d57fcc44e4c9fe99a1f88282f SHA256 541b63def2c823d42a099fbc508206bd21df762c632c9f58ca347aced9f66f51
+EBUILD libnsbmp-0.0.3.ebuild 258 RMD160 70b85750ab37a1f312574fd1c8482047b7855ba6 SHA1 ea475bb35258b0a51533e81ab78dc1f7117b7908 SHA256 718ee61d3800ccb64d28fd65906f99ecafbda0d21f831def633cf098340e5f40
+MISC ChangeLog 418 RMD160 17cc2455310910fe187d5ba2ba387d6072e1a25c SHA1 082377c080f70fe17a5c0fa70bcd5800b77cfe62 SHA256 c10247e3dd75608af001bcbde9a57438b45c78cdc488a78b9a0c48c8cea06734
 MISC metadata.xml 249 RMD160 62b32ecefb68df84b41edb7f9f723c2f48a4affa SHA1 1ab0c24ec00e77d4f681fa62ee800d25e0b3f583 SHA256 23a9b4802efacede04885b28ee80b8879224458c9cc3ecd58401728f20c1ca30
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2/AEQACgkQknrdDGLu8JDH+gD/WqcCI2+T6q/bwiyzRyPVhrl7
-r5Yz7GJVvJK7zdIuurMA/3V/BlXC04r2AOOxJNSSTeUxJuqsbHfO/phuP8XVczMO
-=chik
+iF4EAREIAAYFAk2/JpsACgkQknrdDGLu8JCAlAD+Kxk1PyiWc2goNXRSj330UOzu
+Su5LyiExTi10gXdM0rQA/R8EgbUHvsUdVJq8eE2bODrumE/PD5HlmLfsEXuuTqAL
+=xpC0
 -----END PGP SIGNATURE-----
