@@ -4,42 +4,9 @@
 
 EAPI=3
 
-inherit multilib
+inherit netsurf
 
 DESCRIPTION="decoding library for BMP and ICO image file formats, written in C"
-HOMEPAGE="http://www.netsurf-browser.org/projects/libnsbmp/"
-SRC_URI="http://www.netsurf-browser.org/projects/releases/${P}-src.tar.gz"
 
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64"
-IUSE="static-libs"
-
-DEPEND=""
-RDEPEND="${DEPEND}"
-
-S=${WORKDIR}/${P}-src
-
-src_configure() {
-	sed -e "/^INSTALL_ITEMS/s: /lib: /$(get_libdir):g" \
-		-i Makefile || die
-	sed -e "/^libdir/s:/lib:/$(get_libdir):g" \
-		-i ${PN}.pc.in || die
-}
-
-src_compile() {
-	emake COMPONENT_TYPE=lib-shared || die
-	if use static-libs ; then
-		emake COMPONENT_TYPE=lib-static || die
-	fi
-}
-src_test() {
-	emake COMPONENT_TYPE=lib-shared test || die
-}
-
-src_install() {
-	emake DESTDIR="${D}" PREFIX=/usr COMPONENT_TYPE=lib-shared install || die
-	if use static-libs ; then
-		emake DESTDIR="${D}" PREFIX=/usr COMPONENT_TYPE=lib-static install || die
-	fi
-}
+IUSE=""
+KEYWORDS="~amd64 ~x86"
