@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 May 2011; Michael Weber <xmw@gentoo.org> libnsbmp-0.0.3.ebuild:
+  moved to netsurf.eclass
+
 *libnsbmp-0.0.3 (02 May 2011)
 
   02 May 2011; Michael Weber <xmw@gentoo.org> +libnsbmp-0.0.3.ebuild,
